--- a/smartdown_template.html
+++ b/smartdown_template.html
@@ -16,13 +16,10 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel=stylesheet href="http://smartdown.site/lib/smartdown.css">
-  <script src="http://smartdown.site/lib/smartdown.js"></script>
+  <link rel=stylesheet href="https://unpkg.com/smartdown/docs/lib/smartdown.css">
+  <script src="https://unpkg.com/smartdown/docs/lib/smartdown.js"></script>
 
-  <script type="text/x-smartdown" id="SmartdownPreview">
-     $content
-  </script>
-
+  <script type="text/x-smartdown" id="SmartdownPreview">$content</script>
 </head>
 
 <body style="margin:0;padding:0;background:#FEFEFE;">
@@ -31,19 +28,16 @@
         <div class="smartdown-container" id="smartdown-output">
     </div>
   </div>
-  
+
   <script>
   /* global smartdown */
-  /*
+  var baseURL = 'https://unpkg.com/smartdown/docs/';
   var icons = {
-    'hypercube': 'assets/img/Hypercube.svg',
-    'StalactiteStalagmite': 'assets/img/StalactiteStalagmite.svg'
+    'hypercube': baseURL + 'lib/example/Hypercube.svg',
+    'StalactiteStalagmite': baseURL + 'lib/example/StalactiteStalagmite.svg'
   };
-  */
-  var icons = {};
-  var baseURL = 'http://smartdown.site/';
   var multiparts = null;
-  
+
   function exampleLoaded() {
     /* eslint no-invalid-this: 0 */
     // var sourceText = this.responseText;
@@ -76,7 +70,7 @@
     if (part) {
       var output = document.getElementById('smartdown-output');
       smartdown.setHome(part, output, function() {
-        // smartdown.startAutoplay(renderElement);
+        smartdown.startAutoplay(output);
       });
     }
     else {
@@ -128,9 +122,6 @@
   };
   smartdown.initialize(icons, baseURL, loadInline, cardLoader, calcHandlers);
   </script>
-  
-  <!-- script src="http://smartdown.site/assets/js/jquery/jquery.min.js"></script -->
-  <!-- script src="http://smartdown.site/assets/js/bootstrap/bootstrap.min.js"></script -->
 
 </body>
 </html>
