--- a/smartdown_template.html
+++ b/smartdown_template.html
@@ -13,11 +13,10 @@
 
   <!-- link rel="shortcut icon" href="favicon.ico" / -->
   <!-- Use Bootstrap CSS for this page's look -->
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel=stylesheet href="https://unpkg.com/smartdown/docs/lib/smartdown.css">
-  <script src="https://unpkg.com/smartdown/docs/lib/smartdown.js"></script>
+  <link rel=stylesheet href="https://unpkg.com/smartdown@0.0.23/docs/lib/smartdown.css">
+  <script src="https://unpkg.com/smartdown@0.0.23/docs/lib/smartdown.js"></script>
 
   <script type="text/x-smartdown" id="SmartdownPreview">$content</script>
 </head>
@@ -31,7 +30,7 @@
 
   <script>
   /* global smartdown */
-  var baseURL = 'https://unpkg.com/smartdown/docs/';
+  var baseURL = 'https://unpkg.com/smartdown@0.0.23/docs/';
   var icons = {
     'hypercube': baseURL + 'lib/example/Hypercube.svg',
     'StalactiteStalagmite': baseURL + 'lib/example/StalactiteStalagmite.svg'
